<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#201E1E">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="185dp" app:srcCompat="@drawable/start_image_view" android:id="@+id/imageView"
                android:contentDescription="View of a car at an intersection"/>
        <Button
                android:text="@string/explore_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_explore"
                android:textSize="24sp"/>
        <Button
                android:text="@string/plan_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_planning_mode"
                android:onClick="openPlanView"
                android:textSize="24sp"/>
        <Button
                android:text="@string/drive_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_drive_mode"
                android:onClick="openDriveView" android:textSize="24sp"/>
        <Button
                android:text="@string/statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_stats"
                android:visibility="invisible"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>